--- a/Cats/app/src/main/res/layout/activity_image_upload.xml
+++ b/Cats/app/src/main/res/layout/activity_image_upload.xml
@@ -33,13 +33,20 @@
 
     <Button
         android:id="@+id/memeBtn"
-        android:layout_width="145dp"
+        android:layout_width="146dp"
         android:layout_height="76dp"
-        android:layout_alignBottom="@+id/IVPreviewImage"
+        android:layout_below="@+id/IVPreviewImage"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="143dp"
         android:layout_marginLeft="143dp"
-        android:layout_marginBottom="-202dp"
+        android:layout_marginTop="57dp"
+        android:layout_marginBottom="149dp"
         android:text="Make Meme" />
+
+    <TextView
+        android:id="@+id/category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </RelativeLayout>
