--- a/Cats/app/src/main/res/layout/meme_out.xml
+++ b/Cats/app/src/main/res/layout/meme_out.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#0A0C19">
 
     <TextView
         android:id="@+id/textView2"
@@ -31,7 +33,9 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_width="154dp"
+        android:layout_height="89dp"
+        android:background="#F4F1F1"
+        android:text="TextView"
+        android:textColor="#020202" />
 </RelativeLayout>
