--- a/Cats/app/src/main/res/layout/activity_called_from_mk_from_txt.xml
+++ b/Cats/app/src/main/res/layout/activity_called_from_mk_from_txt.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#0A0C19"
+    android:backgroundTint="#0A0C19"
     tools:context=".ImEnteringActivity">
 
     <ImageView
         android:id="@+id/meme_image"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
         android:src="@drawable/wp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +25,7 @@
         android:id="@+id/meme_txt"
         android:layout_width="407dp"
         android:layout_height="22dp"
+        android:layout_marginBottom="20dp"
         android:background="@color/white"
         android:text="@string/memetxt"
         android:textAlignment="center"
@@ -31,14 +34,16 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/meme_image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
 
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/save_meme_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#1B2147"
+        android:backgroundTint="#040202"
         android:text="@string/save"
         app:icon="@drawable/baseline_save_black_18"
         app:layout_constraintBottom_toTopOf="@+id/meme_txt"
