--- a/Cats/app/src/main/res/layout/activity_meme_from_image.xml
+++ b/Cats/app/src/main/res/layout/activity_meme_from_image.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:backgroundTint="#0A0C19"
     tools:context=".ImEnteringActivity">
 
     <ImageView
@@ -18,8 +20,8 @@
 
     <TextView
         android:id="@+id/meme_txt"
-        android:layout_width="407dp"
-        android:layout_height="144dp"
+        android:layout_width="414dp"
+        android:layout_height="27dp"
         android:background="@color/white"
         android:text="@string/memetxt"
         android:textAlignment="center"
@@ -28,10 +30,9 @@
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.132" />
+        app:layout_constraintVertical_bias="0.266" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
