--- a/Cats/app/src/main/res/layout/activity_called_from_mk_from_txt.xml
+++ b/Cats/app/src/main/res/layout/activity_called_from_mk_from_txt.xml
@@ -10,12 +10,12 @@
 
     <ImageView
         android:id="@+id/meme_image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
         android:src="@drawable/wp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,28 +23,30 @@
 
     <TextView
         android:id="@+id/meme_txt"
-        android:layout_width="407dp"
-        android:layout_height="22dp"
-        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:ellipsize="none"
+        android:maxLines="100"
+        android:scrollHorizontally="false"
         android:background="@color/white"
         android:text="@string/memetxt"
-        android:textAlignment="center"
         android:textColor="#000000"
         android:textColorHint="#D64343"
-        android:textSize="18sp"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/meme_image"
-        app:layout_constraintEnd_toEndOf="parent"
 
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/save_meme_button"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#1B2147"
         android:backgroundTint="#040202"
-        android:text="@string/save"
         app:icon="@drawable/baseline_save_black_18"
         app:layout_constraintBottom_toTopOf="@+id/meme_txt"
         app:layout_constraintEnd_toEndOf="parent"
