--- a/Cats/app/src/main/res/layout/activity_main.xml
+++ b/Cats/app/src/main/res/layout/activity_main.xml
@@ -48,13 +48,13 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="385dp"
+        android:layout_height="108dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.721"
-        app:srcCompat="@drawable/memow_logo" />
+        app:srcCompat="@drawable/memeow_logo_2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
