--- a/Cats/app/src/main/res/layout/activity_text_entering.xml
+++ b/Cats/app/src/main/res/layout/activity_text_entering.xml
@@ -14,7 +14,7 @@
         android:background="#009768"
         android:backgroundTint="#9BBDB7"
         android:ems="10"
-        android:hint="max characters: 45"
+        android:hint="Enter something funny"
         android:inputType="textPersonName"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
