--- a/Cats/app/src/main/res/layout/activity_meme_from_image.xml
+++ b/Cats/app/src/main/res/layout/activity_meme_from_image.xml
@@ -41,17 +41,18 @@
 
     <Button
         android:id="@+id/save_IMG_meme_button"
+        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
         android:layout_width="wrap_content"
-        android:gravity="center"
         android:layout_height="wrap_content"
         android:background="#1B2147"
         android:backgroundTint="#040202"
+        android:gravity="center"
         app:icon="@drawable/baseline_save_black_18"
         app:layout_constraintBottom_toTopOf="@+id/meme_txt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.949"
+        app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.088" />
+        app:layout_constraintVertical_bias="0.266" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
