--- a/Cats/app/src/main/res/layout/activity_meme_from_image.xml
+++ b/Cats/app/src/main/res/layout/activity_meme_from_image.xml
@@ -40,6 +40,23 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/meme_sentiment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:text="TextView"
+        android:textAlignment="viewStart"
+        android:textColor="@color/design_default_color_secondary_variant"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/save_meme_button"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/meme_image"
+        app:layout_constraintVertical_bias="0.787" />
+
     <Button
         android:id="@+id/save_IMG_meme_button"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
