text model updated, UI changes

--- a/Cats/app/src/main/res/layout/activity_text_entering.xml
+++ b/Cats/app/src/main/res/layout/activity_text_entering.xml
@@ -11,8 +11,8 @@
         android:id="@+id/inputEditText"
         android:layout_width="338dp"
         android:layout_height="72dp"
-        android:background="#009768"
         android:backgroundTint="#9BBDB7"
+        android:background="@drawable/edit_text_style"
         android:ems="10"
         android:hint="Enter something funny"
         android:inputType="textPersonName"
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:backgroundTint="#987878"
+        android:background="@drawable/edit_text_style"
         android:capitalize="words"
         android:text="Create Meme"
         android:textSize="30sp"
