--- a/Cats/app/src/main/res/layout/activity_image_upload.xml
+++ b/Cats/app/src/main/res/layout/activity_image_upload.xml
@@ -37,12 +37,14 @@
 
     <Button
         android:id="@+id/memeBtn"
-        android:layout_width="146dp"
-        android:layout_height="76dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/IVPreviewImage"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/edit_text_style"
         android:layout_marginStart="143dp"
         android:layout_marginLeft="143dp"
+        android:textSize="30sp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="149dp"
         android:backgroundTint="#987878"
