--- a/Cats/app/src/main/res/layout/activity_text_entering.xml
+++ b/Cats/app/src/main/res/layout/activity_text_entering.xml
@@ -29,11 +29,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:backgroundTint="#987878"
         android:background="@drawable/edit_text_style"
+        android:backgroundTint="#987878"
         android:capitalize="words"
         android:text="Create Meme"
         android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputEditText" />
